Force IE7 to inherit the color of it's parent in menubutton links. Keeps the first letter from turning invisible after the text-transform to uppercase the first letter of the menubutton. This should complete the fixes for ticket #283. Everything else in the admin appears to be working fine in IE7.
git-svn-id: https://svn.habariproject.org/habari/trunk/htdocs/system@3128 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/admin/css/ie.css
+++ b/admin/css/ie.css
@@ -70,3 +70,6 @@
 	float: right;
 }
 
+#menubutton a:first-letter{
+	color: inherit;
+}
